<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/scrollable_content_area_for_details"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:id="@+id/tv_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            tools:src="@tools:sample/avatars"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:layout_marginStart="12dp"
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/nama"
            android:textSize="30sp"/>

        <TextView
            android:layout_marginStart="12dp"
            android:id="@+id/descripton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/textview"/>

        <Button
            android:id="@+id/button_go"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginTop="68dp"
            android:text="@string/kunjugi" />

    </LinearLayout>

</ScrollView>